Fixed issue with PK filter and implicit cast
Given the following situation:
```
CREATE TABLE tbl(a string PRIMARY KEY);
INSERT INTO tbl(a) VALUES ('t');
REFRESH TABLE t;
SELECT * FROM tbl WHERE a = true;
```

Previously, when trying to filter on the PK column with equality
operator, but using a value of a different type (in this example
`boolean`), then no results where returned because the dockeys where
built incorrently. `ExpressionAnalyzer` creates an implicit cast on the
column `a`, to match the type of the value (see: #10076 which introduced
this concept). So the query of the `WHERE` clause becomes:
```
a::boolean = true
```
Because of that the value added to the dockeys is `true`, instead of `t`.

To resolve this, we need to call `optimizeCasts()` before extracting
the `pkMatches` with the use of `EqualityExtractor`, so that the cast is
moved to the value:
```
a = true::'string'
```
and the `EqualityExtractor` normalizes the value to `t` which then
is added to the list of dockeys.

Fixes: #15326